--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,6 @@ iOSInjectionProject/
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 # End of https://www.gitignore.io/api/swift,xcode,macos,cocoapods
+
+/repos/*
+!/repos/.gitkeep
