Add, Update add losg *.md file update facelogin test

--- a/WoowahanFresh/Podfile
+++ b/WoowahanFresh/Podfile
@@ -13,4 +13,16 @@ pod 'lottie-ios'
 pod 'SwiftLint'
 pod 'RxSwift'
 
+pod 'FacebookCore'
+pod 'FacebookLogin'
+pod 'FacebookShare'
+
+#pod 'FBSDKCoreKit'  
+#pod 'FBSDKLoginKit'
+#pod 'FBSDKShareKit'
+
+#pod 'FBSDKPlacesKit'
+#pod 'FBSDKMessengerShareKit'
+
 end
+
