--- a/WoowahanFresh/WoowahanFresh/Supporting Files/Info.plist
+++ b/WoowahanFresh/WoowahanFresh/Supporting Files/Info.plist
@@ -43,7 +43,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Master</string>
+	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
