Update, API Test 진행 턴키로 받아 처리하는 방법 구상해야함.

--- a/WoowahanFresh/Podfile
+++ b/WoowahanFresh/Podfile
@@ -7,7 +7,7 @@ target 'WoowahanFresh' do
 
   # Pods for WoowahanFresh
 
-#pod 'Alamofire'
+pod 'Alamofire'
 #pod 'Realm'
 #pod 'lottie-ios'
 #pod 'SwiftLint'
