Update, sprint2 save 구조 나누기

--- a/WoowahanFresh/Podfile
+++ b/WoowahanFresh/Podfile
@@ -8,7 +8,7 @@ target 'WoowahanFresh' do
   # Pods for WoowahanFresh
 
 pod 'Alamofire'
-#pod 'Realm'
+pod 'RealmSwift'
 #pod 'lottie-ios'
 #pod 'SwiftLint'
 #pod 'RxSwift'
