Error, 회원가입 응답 400

--- a/WoowahanFresh/Podfile
+++ b/WoowahanFresh/Podfile
@@ -13,13 +13,13 @@ pod 'RealmSwift'
 #pod 'SwiftLint'
 #pod 'RxSwift'
 
-#pod 'FacebookCore'
-#pod 'FacebookLogin'
-#pod 'FacebookShare'
+pod 'FacebookCore'
+pod 'FacebookLogin'
+pod 'FacebookShare'
 
-pod 'FBSDKCoreKit'  
-pod 'FBSDKLoginKit'
-pod 'FBSDKShareKit'
+#pod 'FBSDKCoreKit'  
+#pod 'FBSDKLoginKit'
+#pod 'FBSDKShareKit'
 
 # pod 'FBSDKPlacesKit'
 # pod 'FBSDKMessengerShareKit'
